--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+* {
+  box-sizing: border-box;
+  margin: auto;
+}
+
 .App {
   text-align: center;
+  width: 700px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-div {
+  background-color: #F55A5A;
+  color: #FFF;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-div {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.img-div {
+  margin-top: 30px;
+  width: 200px;
+  height: 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-div img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.content-div {
+  width: 70%;
+  text-align: left;
+  padding-left: 30px;
+}
+
+.pin {
+  color: #F55A5A;
+}
+
+.location {
+  letter-spacing: 3px;
+}
+
+.ctn-1 a {
+  color: #918E9B; 
+}
+
+.ctn-2 {
+  margin-top: 10px;
+}
+
+.date {
+  font-weight: 500;
 }
